Revert "removed expansive alt-text from unrealiable request to avoid changing the layout too much"
This reverts commit 7e2990ad4a24ac2addc18df860c77a47f4e5db07.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -944,12 +944,6 @@ table .attention {
   margin-top: -1em;
   font-style: italic; }
 
-.registration img {
-  border-radius: 50%;
-  object-fit: cover;
-  width: 2em;
-  height: 2em; }
-
 /*
  * UI for anonymous meal registrations (name, email, etc.)
  */
@@ -1196,12 +1190,10 @@ section.collapsed {
     margin-top: -1em;
     font-style: italic; }
   section {
-    position: static !important;
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
+    position: static;
     left: 0;
-    top: 0;
-    padding: 0; }
+    top: 0; }
   #print_instructions {
     display: block !important; } }
 
