--- a/resources/assets/sass/print.scss
+++ b/resources/assets/sass/print.scss
@@ -22,12 +22,10 @@
     }
 
     section {
-        position: static !important;
-        margin: 0;
-        padding: 0;
+        margin-top: 0;
+        position: static;
         left: 0;
         top: 0;
-        padding: 0;
     }
 
     #print_instructions {
